// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterCells generates correct louvain clusters data with one sample in particular 1`] = `
{
  "cellSetLegendsData": [
    {
      "color": "#e377c2",
      "key": "louvain-0",
      "name": "Cluster 0",
    },
    {
      "color": "#8c564b",
      "key": "louvain-1",
      "name": "Cluster 1",
    },
  ],
  "filteredCells": {
    "1": {
      "cellId": 1,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "10": {
      "cellId": 10,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "11": {
      "cellId": 11,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "12": {
      "cellId": 12,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "16": {
      "cellId": 16,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "17": {
      "cellId": 17,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "18": {
      "cellId": 18,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "19": {
      "cellId": 19,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "2": {
      "cellId": 2,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "20": {
      "cellId": 20,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "21": {
      "cellId": 21,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "22": {
      "cellId": 22,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "23": {
      "cellId": 23,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "24": {
      "cellId": 24,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "25": {
      "cellId": 25,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "26": {
      "cellId": 26,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "27": {
      "cellId": 27,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "28": {
      "cellId": 28,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "29": {
      "cellId": 29,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "3": {
      "cellId": 3,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "30": {
      "cellId": 30,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "31": {
      "cellId": 31,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "32": {
      "cellId": 32,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "33": {
      "cellId": 33,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "34": {
      "cellId": 34,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "35": {
      "cellId": 35,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "36": {
      "cellId": 36,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "37": {
      "cellId": 37,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "38": {
      "cellId": 38,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "39": {
      "cellId": 39,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "4": {
      "cellId": 4,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "40": {
      "cellId": 40,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "5": {
      "cellId": 5,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "6": {
      "cellId": 6,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "7": {
      "cellId": 7,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "8": {
      "cellId": 8,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    "9": {
      "cellId": 9,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
  },
}
`;

exports[`filterCells generates correct samples data with one sample in particular 1`] = `
{
  "cellSetLegendsData": [
    {
      "color": "#8c564b",
      "key": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "name": "KO",
    },
  ],
  "filteredCells": {
    "1": {
      "cellId": 1,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "10": {
      "cellId": 10,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "11": {
      "cellId": 11,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "12": {
      "cellId": 12,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "13": {
      "cellId": 13,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "14": {
      "cellId": 14,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "15": {
      "cellId": 15,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "16": {
      "cellId": 16,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "17": {
      "cellId": 17,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "18": {
      "cellId": 18,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "19": {
      "cellId": 19,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "2": {
      "cellId": 2,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "20": {
      "cellId": 20,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "21": {
      "cellId": 21,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "22": {
      "cellId": 22,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "23": {
      "cellId": 23,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "24": {
      "cellId": 24,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "25": {
      "cellId": 25,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "26": {
      "cellId": 26,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "27": {
      "cellId": 27,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "28": {
      "cellId": 28,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "29": {
      "cellId": 29,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "3": {
      "cellId": 3,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "30": {
      "cellId": 30,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "31": {
      "cellId": 31,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "32": {
      "cellId": 32,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "33": {
      "cellId": 33,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "34": {
      "cellId": 34,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "35": {
      "cellId": 35,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "36": {
      "cellId": 36,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "37": {
      "cellId": 37,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "38": {
      "cellId": 38,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "39": {
      "cellId": 39,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "4": {
      "cellId": 4,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "40": {
      "cellId": 40,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "5": {
      "cellId": 5,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "6": {
      "cellId": 6,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "7": {
      "cellId": 7,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "8": {
      "cellId": 8,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    "9": {
      "cellId": 9,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
  },
}
`;

exports[`filterCells works correctly with some repeated names in louvain clusters 1`] = `
{
  "cellSetLegendsData": [
    {
      "color": "#e377c2",
      "key": "louvain-0",
      "name": "repeatedName",
    },
    {
      "color": "#8c564b",
      "key": "louvain-1",
      "name": "Cluster 1",
    },
    {
      "color": "#d62728",
      "key": "louvain-2",
      "name": "repeatedName",
    },
    {
      "color": "#2ca02c",
      "key": "louvain-3",
      "name": "Cluster 3",
    },
    {
      "color": "#ff7f0e",
      "key": "louvain-4",
      "name": "Cluster 4",
    },
    {
      "color": "#1f77b4",
      "key": "louvain-5",
      "name": "Cluster 5",
    },
    {
      "color": "#f8e71c",
      "key": "louvain-6",
      "name": "repeatedName",
    },
    {
      "color": "#3957ff",
      "key": "louvain-7",
      "name": "Cluster 7",
    },
    {
      "color": "#d3fe14",
      "key": "louvain-8",
      "name": "Cluster 8",
    },
    {
      "color": "#c9080a",
      "key": "louvain-9",
      "name": "Cluster 9",
    },
    {
      "color": "#fec7f8",
      "key": "louvain-10",
      "name": "Cluster 10",
    },
    {
      "color": "#0b7b3e",
      "key": "louvain-11",
      "name": "Cluster 11",
    },
    {
      "color": "#0bf0e9",
      "key": "louvain-12",
      "name": "Cluster 12",
    },
    {
      "color": "#c203c8",
      "key": "louvain-13",
      "name": "Cluster 13",
    },
  ],
  "filteredCells": {
    "1": {
      "cellId": 1,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "10": {
      "cellId": 10,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "100": {
      "cellId": 100,
      "cellSetKey": "louvain-13",
      "cellSetName": "Cluster 13",
      "color": "#c203c8",
    },
    "11": {
      "cellId": 11,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "12": {
      "cellId": 12,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "16": {
      "cellId": 16,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "17": {
      "cellId": 17,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "18": {
      "cellId": 18,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "19": {
      "cellId": 19,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "2": {
      "cellId": 2,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "20": {
      "cellId": 20,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "21": {
      "cellId": 21,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "22": {
      "cellId": 22,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "23": {
      "cellId": 23,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "24": {
      "cellId": 24,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "25": {
      "cellId": 25,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "26": {
      "cellId": 26,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "27": {
      "cellId": 27,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "28": {
      "cellId": 28,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "29": {
      "cellId": 29,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "3": {
      "cellId": 3,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "30": {
      "cellId": 30,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "31": {
      "cellId": 31,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "32": {
      "cellId": 32,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "33": {
      "cellId": 33,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "34": {
      "cellId": 34,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "35": {
      "cellId": 35,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "36": {
      "cellId": 36,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "37": {
      "cellId": 37,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "38": {
      "cellId": 38,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "39": {
      "cellId": 39,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "4": {
      "cellId": 4,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "40": {
      "cellId": 40,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "41": {
      "cellId": 41,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "42": {
      "cellId": 42,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "43": {
      "cellId": 43,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "47": {
      "cellId": 47,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "48": {
      "cellId": 48,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "49": {
      "cellId": 49,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "5": {
      "cellId": 5,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "50": {
      "cellId": 50,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "51": {
      "cellId": 51,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "52": {
      "cellId": 52,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "53": {
      "cellId": 53,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "54": {
      "cellId": 54,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "55": {
      "cellId": 55,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    "57": {
      "cellId": 57,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    "58": {
      "cellId": 58,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    "59": {
      "cellId": 59,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    "6": {
      "cellId": 6,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "60": {
      "cellId": 60,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    "61": {
      "cellId": 61,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    "62": {
      "cellId": 62,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    "64": {
      "cellId": 64,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    "65": {
      "cellId": 65,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    "66": {
      "cellId": 66,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    "68": {
      "cellId": 68,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    "69": {
      "cellId": 69,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    "7": {
      "cellId": 7,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "70": {
      "cellId": 70,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    "71": {
      "cellId": 71,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    "72": {
      "cellId": 72,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    "73": {
      "cellId": 73,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    "75": {
      "cellId": 75,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    "76": {
      "cellId": 76,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    "77": {
      "cellId": 77,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    "79": {
      "cellId": 79,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    "8": {
      "cellId": 8,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "80": {
      "cellId": 80,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    "81": {
      "cellId": 81,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    "82": {
      "cellId": 82,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    "84": {
      "cellId": 84,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    "85": {
      "cellId": 85,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    "88": {
      "cellId": 88,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    "89": {
      "cellId": 89,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    "9": {
      "cellId": 9,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    "90": {
      "cellId": 90,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    "91": {
      "cellId": 91,
      "cellSetKey": "louvain-9",
      "cellSetName": "Cluster 9",
      "color": "#c9080a",
    },
    "92": {
      "cellId": 92,
      "cellSetKey": "louvain-9",
      "cellSetName": "Cluster 9",
      "color": "#c9080a",
    },
    "93": {
      "cellId": 93,
      "cellSetKey": "louvain-9",
      "cellSetName": "Cluster 9",
      "color": "#c9080a",
    },
    "94": {
      "cellId": 94,
      "cellSetKey": "louvain-10",
      "cellSetName": "Cluster 10",
      "color": "#fec7f8",
    },
    "95": {
      "cellId": 95,
      "cellSetKey": "louvain-10",
      "cellSetName": "Cluster 10",
      "color": "#fec7f8",
    },
    "96": {
      "cellId": 96,
      "cellSetKey": "louvain-11",
      "cellSetName": "Cluster 11",
      "color": "#0b7b3e",
    },
    "97": {
      "cellId": 97,
      "cellSetKey": "louvain-11",
      "cellSetName": "Cluster 11",
      "color": "#0b7b3e",
    },
    "98": {
      "cellId": 98,
      "cellSetKey": "louvain-12",
      "cellSetName": "Cluster 12",
      "color": "#0bf0e9",
    },
    "99": {
      "cellId": 99,
      "cellSetKey": "louvain-12",
      "cellSetName": "Cluster 12",
      "color": "#0bf0e9",
    },
  },
}
`;

exports[`generateData generates correct data with 1 cluster 1`] = `
{
  "cellSetLegendsData": [
    {
      "color": "#1f77b4",
      "key": "louvain-5",
      "name": "Cluster 5",
    },
  ],
  "plotData": [
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
  ],
}
`;

exports[`generateData generates correct data with all louvain clusters 1`] = `
{
  "cellSetLegendsData": [
    {
      "color": "#e377c2",
      "key": "louvain-0",
      "name": "Cluster 0",
    },
    {
      "color": "#8c564b",
      "key": "louvain-1",
      "name": "Cluster 1",
    },
    {
      "color": "#d62728",
      "key": "louvain-2",
      "name": "Cluster 2",
    },
    {
      "color": "#2ca02c",
      "key": "louvain-3",
      "name": "Cluster 3",
    },
    {
      "color": "#ff7f0e",
      "key": "louvain-4",
      "name": "Cluster 4",
    },
    {
      "color": "#1f77b4",
      "key": "louvain-5",
      "name": "Cluster 5",
    },
    {
      "color": "#f8e71c",
      "key": "louvain-6",
      "name": "Cluster 6",
    },
    {
      "color": "#3957ff",
      "key": "louvain-7",
      "name": "Cluster 7",
    },
    {
      "color": "#d3fe14",
      "key": "louvain-8",
      "name": "Cluster 8",
    },
    {
      "color": "#c9080a",
      "key": "louvain-9",
      "name": "Cluster 9",
    },
    {
      "color": "#fec7f8",
      "key": "louvain-10",
      "name": "Cluster 10",
    },
    {
      "color": "#0b7b3e",
      "key": "louvain-11",
      "name": "Cluster 11",
    },
    {
      "color": "#0bf0e9",
      "key": "louvain-12",
      "name": "Cluster 12",
    },
    {
      "color": "#c203c8",
      "key": "louvain-13",
      "name": "Cluster 13",
    },
  ],
  "plotData": [
    {
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 1,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 2,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 3,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 4,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 5,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 6,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 7,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 8,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 9,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 10,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 11,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 12,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 16,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 17,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 18,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 19,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 20,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 21,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 22,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 23,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 24,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 25,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 26,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 27,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 28,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    {
      "cellId": 29,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
  ],
}
`;
